namespace HeadFirst.DesignPatterns.Strategy
{
    public interface IFlyBehavior
    {
        void Fly();
    }
}