namespace HeadFirst.DesignPatterns.Strategy
{
    public interface IQuackBehavior
    {
        void Quack();
    }
}