using System;
namespace HeadFirst.DesignPatterns.Strategy
{
    public class Quack : IQuackBehavior
    {
        void IQuackBehavior.Quack()
        {
            Console.WriteLine("Quack");
        }
    }
}